# DirDB

./: .gitignore  Cargo.toml  README.ja.md  README.md  TODO.ja.md  TODO.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
benchmark/: README.ja.md  README.md
benchmark/python/: async_throughput.py  mapping_roundtrip.py
crates/dirdb-core/: Cargo.toml
crates/dirdb-core/src/: lib.rs
crates/dirdb-python/: Cargo.toml
crates/dirdb-python/src/: lib.rs
docs/: design.ja.md  design.md
docs/en/: README.md
docs/en/python/: README.md
docs/en/rust/: README.md
docs/ja/: README.md
docs/ja/python/: README.md
docs/ja/rust/: README.md
examples/: README.ja.md  README.md
examples/python/: async_basic.py  async_batch.py  async_concurrency.py  auto_reload.py  dict_mapping.py  version_conflict.py
examples/rust/basic/: Cargo.toml
examples/rust/basic/src/: main.rs
python/dirdb/: __init__.py
scripts/: build-and-install.sh  build-wheel.sh
tests/: __init__.py  __main__.py
tests/python/: test_api.py
