[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "DirDB-Rust"
version = "0.1.0"
description = "Filesystem-first local configuration store"
requires-python = ">=3.9"
readme = "README.md"
license = { text = "MIT OR Apache-2.0" }

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.maturin]
manifest-path = "crates/dirdb-python/Cargo.toml"
module-name = "dirdb._native"
python-source = "python"
