[package]
name = "dirdb-core"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Filesystem-first local configuration store for DirDB"

[dependencies]
parking_lot = "0.12"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "2"
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tempfile = "3"
